--- a/app/views/customers/_form.html.erb
+++ b/app/views/customers/_form.html.erb
@@ -7,17 +7,17 @@
           <div class="overflow-hidden shadow sm:rounded-md">
             <div class="bg-white px-4 py-5 sm:p-6">
               <div class="grid grid-cols-6 gap-6">
-                <div class="col-span-8 sm:col-span-6">
+                <div class="col-span-6 sm:col-span-6">
                     <%= form.label :name, class: "block text-sm font-medium text-gray-700" %>
                     <%= form.text_field :name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                 </div>
                 <%= form.fields_for :physical_address do |physical_address| %>
                 <%= physical_address.hidden_field :address_type, value: "physical" %>
-                <div class="col-span-8 sm:col-span-6">
+                <div class="col-span-6 sm:col-span-6">
                     <%= physical_address.label :address, class: "block text-sm font-medium text-gray-700" %>
                     <%= physical_address.text_field :line1, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                 </div>
-                <div class="col-span-8 sm:col-span-3">
+                <div class="col-span-6 sm:col-span-6 lg:col-span-3">
                     <%= physical_address.label :city, class: "block text-sm font-medium text-gray-700" %>
                     <%= physical_address.text_field :city, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
                 </div>
