--- a/app/views/interpreters/profile.html.erb
+++ b/app/views/interpreters/profile.html.erb
@@ -1,6 +1,6 @@
-<div class="container m-8">
+<div class="container ml-10">
 	<div data-controller="tabs" data-tabs-active-tab="-mb-px border-l border-t border-r rounded-t">
-		<ul class="list-reset list-none flex border-b w-1/2">
+		<ul class="list-reset list-none flex border-b w-3/4">
 			<li class="-mb-px mr-1" data-tabs-target="tab" data-action="click->tabs#change">
 				<a class="bg-white inline-block py-2 px-4 text-blue-500 hover:text-blue-700 font-semibold no-underline" href="#">Profile</a>
 			</li>
@@ -12,29 +12,83 @@
 			</li>
 		</ul>
 
-		<div class="hidden py-4 px-4 border-l border-b border-r w-1/2" data-tabs-target="panel">
-			Tab panel 1
+		<div class="hidden py-4 px-4 border-l border-b border-r w-full" data-tabs-target="panel">
+			<div class="bg-white">
+				<div class="mx-auto max-w-7xl py-12 px-6 lg:px-8 lg:py-24">
+					<div class="space-y-12 lg:grid lg:grid-cols-3 lg:gap-8 lg:space-y-0">		
+						<div class="lg:col-span-2">
+							<ul role="list" class="list-none space-y-12 sm:-mt-8 sm:space-y-0 sm:divide-y sm:divide-gray-200 lg:gap-x-8 lg:space-y-0">
+								<li class="sm:py-8">
+									<div class="space-y-4 sm:grid sm:grid-cols-3 sm:items-start sm:gap-6 sm:space-y-0">
+										<div class="aspect-w-3 aspect-h-2 sm:aspect-w-3 sm:aspect-h-4">
+											<img class="rounded-lg object-cover shadow-lg" src="https://images.unsplash.com/photo-1494790108377-be9c29b29330?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=facearea&facepad=8&w=1024&h=1024&q=80" alt="">
+										</div>
+										<div class="sm:col-span-2">
+											<div class="space-y-4">
+												<div class="space-y-1 font-medium leading-6">
+													<p><strong>First Name: </strong>Chalmers</p>
+													<p><strong>Last Name: </strong>Evans</p>
+													<p><strong>Gender Identity: </strong>Female</p>
+													<p><strong>Home Address: </strong>123 Main Street</p>
+													<p><strong>Home City: </strong>Anytown <strong>Home State: </strong>CA <strong>Home Zip:</strong>11111</p>
+													<p><strong>Mailing Address: </strong>123 Main Street</p>
+													<p><strong>Home City: </strong>Anytown <strong>Home State: </strong>CA <strong>Home Zip:</strong>11111</p>
+													<br/>
+													<p><strong>Emergency Contact</strong></p>
+													<p><strong>Name: </strong>Jenna Savesme</p>
+													<p><strong>Phone Number: </strong>222-222-2222</p>
+												</div>
+											</div>
+										</div>
+									</div>
+								</li>
+							</ul>
+						</div>
+					</div>
+				</div>
+			</div>
 		</div>
-
-		<div class="hidden py-4 px-4 border-l border-b border-r w-1/2" data-tabs-target="panel">
-			<div class="mt-5 ml-10">
-				<p>Email: testing@gmail.com</p>
-				<p>Primary Phone: +1 555 1234</p>
-				<p>Mobile Phone: +1 555-1234</p>
-				<br/>
-				<p><strong>Alerts</strong></p>
-				<p>When Appointment Canceled: Email, SMS</p>
-				<p>When Appointment is Assigned: Email</p>
-				<p>When Appointment is Scheduled: Email, SMS</p>
-				<p>When Appointment is Updated: Email</p>
-				<br/>
-				<p><strong>Reminders</strong></p>
-				<p>Remind me <strong>10 minutes</strong> before an appointment</p>
-				<p class="mt-5 text-blue-500"><%= link_to "Edit...", "#" %></p>
+		<div class="hidden py-4 px-4 border-l border-b border-r w-full" data-tabs-target="panel">
+			<div class="bg-white">
+				<div class="mt-5 ml-10">
+					<p>Email: testing@gmail.com</p>
+					<p>Primary Phone: +1 555 1234</p>
+					<p>Mobile Phone: +1 555-1234</p>
+					<br/>
+					<p><strong>Alerts</strong></p>
+					<p>When Appointment Canceled: Email, SMS</p>
+					<p>When Appointment is Assigned: Email</p>
+					<p>When Appointment is Scheduled: Email, SMS</p>
+					<p>When Appointment is Updated: Email</p>
+					<br/>
+					<p><strong>Reminders</strong></p>
+					<p>Remind me <strong>10 minutes</strong> before an appointment</p>
+					<p class="mt-5 text-blue-500"><%= link_to "Edit...", "#" %></p>
+				</div>
 			</div>
 		</div>
 
-		<div class="hidden py-4 px-4 border-l border-b border-r w-1/2" data-tabs-target="panel">
+		<div class="hidden py-4 px-4 border-l border-b border-r w-full" data-tabs-target="panel">
+			<div class="bg-white">
+				<div class="pt-5 grid grid-cols-3 gap-4">
+					<div class="col-span-2">
+						<p class="mb-2"><strong>Security Question 1: </strong>Lorem ipsum</p>
+						<p class="mb-2"><strong>Security Question 2: </strong>How much wood can a woodchuck chuck?</p>
+						<p class="mb-2"><strong>Security Question 3: </strong>Does Austria alone hold a monopoly of virtue?</p>
+					</div>
+					<div>
+						<button class="mr-3 inline-flex justify-center rounded-md border border-transparent bg-indigo-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-indigo-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Update Questions</button>
+					</div>
+				</div>
+				<div class="mt-5 pb-10 grid grid-cols-3 gap-4">
+					<div class="col-span-2">
+						<p><strong>Password: </strong>**********</p>
+					</div>
+					<div>
+						<button class="mr-3 inline-flex justify-center rounded-md border border-transparent bg-orange-600 py-2 px-4 text-sm font-medium text-white shadow-sm hover:bg-orange-700 focus:outline-none focus:ring-2 focus:ring-indigo-500 focus:ring-offset-2">Change Password</button>
+					</div>
+				</div>
+			</div>
 		</div>
 	</div>
 </div>
