--- a/app/views/pay_bill_configs/index.html.erb
+++ b/app/views/pay_bill_configs/index.html.erb
@@ -1,26 +1,34 @@
 <%= content_for :title, "Pay/Bill Configs" %>
 <%= turbo_stream_from :pay_bill_configs %>
 
-<div class="container px-4 mx-auto my-8">
-  <div class="flex items-center justify-between mb-4">
-    <div>
-      <h1 class="h3">Pay/Bill Configs</h1>
-    </div>
-
-    <%= link_to "New Pay/Bill Config", new_pay_bill_config_path, class: "inline-flex items-center justify-center rounded-md border border-transparent bg-tokanisecondary-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2 sm:w-auto" %>
-  </div>
+<div>
+  <%= render partial: "shared/sidenav" %>
+  <div class="flex flex-1 flex-col md:pl-64">
+    <main class="flex-1">
+      <div class="py-6">
+        <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-8">
+          <div class="px-4 sm:px-6 lg:px-8">
+            <div class="sm:flex sm:items-center">
+              <div class="sm:flex-auto">
+                <h1 class="text-xl font-semibold text-gray-900">Pay Bill Configurations</h1>
+                <p class="mt-2 text-sm text-gray-700">A list of all the pay bill configs in your account.</p>
+              </div>
+              <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
+                <%= link_to t("shared.scaffold.new.title", model: "Pay Bill Config"), new_pay_bill_config_path, class: "inline-flex items-center justify-center rounded-md border border-transparent bg-tokanisecondary-600 px-4 py-2 text-sm font-medium text-white shadow-sm hover:bg-tokanisecondary-700 focus:outline-none focus:ring-2 focus:ring-tokanisecondary-500 focus:ring-offset-2 sm:w-auto" %>
+              </div>
+            </div>
 
   <div class="-mx-4 mt-8 overflow-hidden shadow ring-1 ring-black ring-opacity-5 sm:-mx-6 md:mx-0 md:rounded-lg">
     <table class="min-w-full divide-y divide-gray-300">
       <thead class="bg-gray-50">
         <tr>
-          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6"><%= sortable @pay_bill_rates, :name, "Name" %></th>
-          <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @pay_bill_configs, :minimum_minutes_billed, "Min. minutes billed" %></th>
-          <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @pay_bill_configs, :minimum_minutes_paid, "Min. minutes paid" %></th>
-          <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @pay_bill_configs, :billing_increment, "Billing increment" %></th>
-          <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @pay_bill_configs, :trigger_for_billing_increment, "Billing trigger" %></th>
-          <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900"><%= sortable @pay_bill_configs, :trigger_for_rush_rate, "Rush rate trigger" %></th>
-          <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900"><%= sortable @pay_bill_configs, :trigger_for_discount_rate, "Discount rate trigger" %></th>
+          <th scope="col" class="py-3.5 pl-4 pr-3 text-left text-sm uppercase font-semibold text-gray-900 sm:pl-6"><%= sortable @pay_bill_configs, :name, "Name" %></th>
+          <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @pay_bill_configs, :minimum_minutes_billed, "Min Minutes Billed" %></th>
+          <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @pay_bill_configs, :minimum_minutes_paid, "Min Minutes Paid" %></th>
+          <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @pay_bill_configs, :billing_increment, "Billing Increment" %></th>
+          <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @pay_bill_configs, :trigger_for_billing_increment, "Billing Trigger" %></th>
+          <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @pay_bill_configs, :trigger_for_rush_rate, "Rush Rate Trigger" %></th>
+          <th scope="col" class="hidden px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900 lg:table-cell"><%= sortable @pay_bill_configs, :trigger_for_discount_rate, "Discount Rate Trigger" %></th>
           <th scope="col" class="px-3 py-3.5 text-left text-sm uppercase font-semibold text-gray-900">Active</th>
         </tr>
       </thead>
@@ -29,6 +37,20 @@
         <tr>
           <td class="w-full max-w-0 py-4 pl-4 pr-3 text-sm font-medium text-gray-900 sm:w-auto sm:max-w-none sm:pl-6">
               <%= link_to(pay_bill_config.name, pay_bill_config_path(pay_bill_config)) %>
+              <dl class="font-normal lg:hidden">
+                <dt class="sr-only">Min. Minutes Billed</dt>
+                <dd class="mt-1 truncate text-gray-700"><%= pay_bill_config.minimum_minutes_billed %></dd>
+                <dt class="sr-only">Min. Minutes Paid</dt>
+                <dd class="mt-1 truncate text-gray-700"><%= pay_bill_config.minimum_minutes_paid %></dd>
+                <dt class="sr-only">Billing Increment</dt>
+                <dd class="mt-1 truncate text-gray-500"><%= pay_bill_config.billing_increment %></dd>
+                <dt class="sr-only">Billing Trigger</dt>
+                <dd class="mt-1 truncate text-gray-500"><%= pay_bill_config.trigger_for_billing_increment %></dd>
+                <dt class="sr-only">Rush Rate Trigger</dt>
+                <dd class="mt-1 truncate text-gray-500"><%= pay_bill_config.trigger_for_rush_rate %></dd>
+                <dt class="sr-only">Discount Rate Trigger</dt>
+                <dd class="mt-1 truncate text-gray-500"><%= pay_bill_config.trigger_for_discount_rate %></dd>
+              </dl>
           </td>
           <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= pay_bill_config.minimum_minutes_billed %></td>
           <td class="hidden px-3 py-4 text-sm text-gray-500 lg:table-cell"><%= pay_bill_config.minimum_minutes_paid %></td>
@@ -42,10 +64,15 @@
       </tbody>
     </table>
   </div>
+</div>
+</div>
+</div>
+</main>
+</div>
 
   <% if @pagy.pages > 1 %>
     <div class="my-6 text-center">
       <%== pagy_nav(@pagy) %>
     </div>
   <% end %>
-</div>
+
