--- a/app/views/pay_bill_configs/show.html.erb
+++ b/app/views/pay_bill_configs/show.html.erb
@@ -1,17 +1,32 @@
 <%= content_for :title, "Pay Bill Configs ##{@pay_bill_config.id}" %>
 <%= turbo_stream_from @pay_bill_config %>
+<%= render partial: "shared/sidenav" %>
+<div class="flex flex-1 flex-col md:pl-64">
+  <main class="flex-1">
+    <div class="py-6">
+      <div class="mx-auto max-w-7xl px-4 sm:px-6 md:px-8">
+          <div class="px-4 sm:px-6 lg:px-8">
+            <div class="sm:flex sm:items-center pb-6">
+                <div class="sm:flex-auto"> 
+                  <h1 class="text-xl font-semibold text-gray-900">
+                    <%= link_to "Pay Bill Configs", pay_bill_configs_path, class: "text-tokanisecondary-500" %>
+                      <span class="text-gray-400 font-light mx-2">\</span>
+                      <%= @pay_bill_config.name %>
+                  </h1>
+                </div>
+                  <div class="mt-4 sm:mt-0 sm:ml-16 sm:flex-none">
+                    <%= link_to t("edit"), edit_pay_bill_config_path(@pay_bill_config), class: "btn btn-tokani_purple" %>
+                  </div>
+                </div>
+          
 
-<div class="container px-4 mx-auto my-8">
-  <div class="flex items-center justify-between mb-4">
-    <h1 class="h3">
-      <%= link_to "Pay/Bill Configs", pay_bill_configs_path, class: "text-black" %>
-      <span class="text-gray-400 font-light mx-2">\</span>
-      <%= @pay_bill_config.name %>
-    </h1>
-    <%= link_to t("edit"), edit_pay_bill_config_path(@pay_bill_config), class: "btn btn-white" %>
-  </div>
-
-  <div class="p-8 bg-white rounded shadow">
-    <%= render @pay_bill_config %>
-  </div>
+                <div class="p-8 bg-white rounded shadow">
+                  <%= render @pay_bill_config %>
+                 
+                </div>
+            </div>
+          </div>
+        </div>
+  </main>
 </div>
+
