--- a/app/views/interpreters/profile_notifications_edit.html.erb
+++ b/app/views/interpreters/profile_notifications_edit.html.erb
@@ -1,8 +1,8 @@
-<div class="container m-10">
-	<div class="mt-4 mb-8">
+<div class="container mt-10">
+	<div class="mt-4 mb-8 ml-8">
 		<%= link_to "< Back", interpreters_profile_path, class: "text-blue-600 underline" %>
 	</div>
-	<form class="space-y-8 divide-y divide-gray-200">
+	<form class="space-y-8 divide-y divide-gray-200 grid justify-items-center">
 		<div class="space-y-8 sm:space-y-5">
 			<div class="space-y-6 sm:space-y-5">
 				<div>
@@ -15,19 +15,19 @@
 					<div class="sm:grid sm:items-start sm:gap-4 sm:pt-5">
 						<label for="email" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Email Address</label>
 						<div class="mt-1 sm:col-span-2 sm:mt-0">
-							<input id="email" name="email" type="email" class="block w-1/4 max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+							<input id="email" name="email" type="email" class="block w-1/2 max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
 						</div>
 					</div>
 					<div class="sm:grid sm:items-start sm:gap-4 sm:pt-5">
 						<label for="primary-phone" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Primary Phone</label>
 						<div class="mt-1 sm:col-span-2 sm:mt-0">
-							<input id="primary-phone" name="primary-phone" type="tel" class="block w-1/4 max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+							<input id="primary-phone" name="primary-phone" type="tel" class="block w-1/2 max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
 						</div>
 					</div>
 					<div class="sm:grid sm:items-start sm:gap-4 sm:pt-5">
 						<label for="mobile-phone" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Mobile Phone</label>
 						<div class="mt-1 sm:col-span-2 sm:mt-0">
-							<input id="mobile-phone" name="mobile-phone" type="tel" class="block w-1/4 max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
+							<input id="mobile-phone" name="mobile-phone" type="tel" class="block w-1/2 max-w-lg rounded-md border-gray-300 shadow-sm focus:border-indigo-500 focus:ring-indigo-500 sm:text-sm">
 						</div>
 					</div>
 				</div>
@@ -180,11 +180,3 @@
 		</div>
 	</form>
 </div>
-
-
-	<div class="sm:grid sm:grid-cols-3 sm:items-start sm:gap-4 sm:border-t sm:border-gray-200 sm:pt-5">
-						<label for="country" class="block text-sm font-medium text-gray-700 sm:mt-px sm:pt-2">Country</label>
-						<div class="mt-1 sm:col-span-2 sm:mt-0">
-							
-						</div>
-					</div>
