--- a/app/views/pay_bill_configs/_form.html.erb
+++ b/app/views/pay_bill_configs/_form.html.erb
@@ -1,12 +1,13 @@
 <div>
-<%= form_with(model: pay_bill_config) do |form| %>
+  <% form_url = pay_bill_config.new_record? ? pay_bill_configs_path : pay_bill_config_path(pay_bill_config) %>
+  <%= form_with(model: pay_bill_config, url: form_url) do |form| %>
+<%# form_with(model: pay_bill_config) do |form| %>
   <%= render "shared/error_messages", resource: form.object %>
 
   <div class="mt-5 md:col-span-2 md:mt-0">
     <div class="overflow-hidden shadow sm:rounded-md">
       <div class="bg-white px-4 py-5 sm:p-6">
         <div class="grid grid-cols-6 gap-6" data-controller="pay-bill-config" data-pay-bill-config-inverted-value="true">
-          <!-- <div  data-controller="pay-bill-config" data-pay-bill-config-inverted-value="true">   -->
             <div class="col-span-6 sm:col-span-6 lg:col-span-6">
               <%= form.label "Config Name *", class: "block text-sm font-medium text-tokanisecondary-700" %>
               <%= form.text_field :name, class: "mt-1 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>   
@@ -31,8 +32,7 @@
               <div class="col-span-6 sm:col-span-6 lg:col-span-3">
                   <%= form.label :minimum_minutes_paid,  class:"block text-sm font-medium text-tokanisecondary-700" %>
                   <%= form.number_field :minimum_minutes_paid, class: "mt-2 mb-2 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm" %>
-                </div>
-                  
+                </div>    
             </div>
 
             <div class="col-span-6 sm:col-span-6 lg:col-span-6">
@@ -49,19 +49,19 @@
             <div id="cancel_wrapper" class="col-span-6 sm:col-span-6 lg:col-span-4 min_mins cancel_levels" data-pay-bill-config-target="toggleHideMinMinutesBilledCancel">
               <div class="col-span-6 sm:col-span-6 lg:col-span-3">
                 <%= form.label :minimum_minutes_billed_cancelled_level1, class: "block text-sm font-medium text-tokanisecondary-700" %>
-                <%= form.number_field :minimum_minutes_billed_cancelled_level1 , class: "mt-2 mb-2 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm"  %>
+                <%= form.number_field :minimum_minutes_billed_cancelled_level_1 , class: "mt-2 mb-2 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm"  %>
               </div>
               <div class="col-span-6 sm:col-span-6 lg:col-span-3">
                 <%= form.label :minimum_minutes_paid_cancelled_level1, class: "block text-sm font-medium text-tokanisecondary-700" %>
-                <%= form.number_field :minimum_minutes_paid_cancelled_level1 , class: "mt-2 mb-2 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm"  %>
+                <%= form.number_field :minimum_minutes_paid_cancelled_level_1 , class: "mt-2 mb-2 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm"  %>
               </div>  
               <div class="col-span-6 sm:col-span-6 lg:col-span-3">
                 <%= form.label :minimum_minutes_billed_cancelled_level2, class: "block text-sm font-medium text-tokanisecondary-700" %>
-                <%= form.number_field :minimum_minutes_billed_cancelled_level2 , class: "mt-2 mb-2 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm"  %>
+                <%= form.number_field :minimum_minutes_billed_cancelled_level_2 , class: "mt-2 mb-2 block w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm"  %>
               </div>
               <div class="col-span-6 sm:col-span-6 lg:col-span-3">
                 <%= form.label :minimum_minutes_paid_cancelled_level2, class: "block text-sm font-medium text-tokanisecondary-700" %>
-                <%= form.number_field :minimum_minutes_paid_cancelled_level2, class: "mt-2 mb-2 w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm"  %>
+                <%= form.number_field :minimum_minutes_paid_cancelled_level_2, class: "mt-2 mb-2 w-full rounded-md border border-gray-300 py-2 px-3 shadow-sm focus:border-tokanisecondary-500 focus:outline-none focus:ring-tokanisecondary-500 sm:text-sm"  %>
               </div>
             </div>
 
@@ -141,7 +141,7 @@
             <label class="text-md my-2 font-medium text-tokanisecondary-700">After Hours (M-F) Start Time 1</label>
             <div class="relative flex items-center">
               <div class="flex-grow items-center mr-2">
-                <%= select_hour @pay_bill_config.start_hour(:afterhours_availability_start_seconds1), { ampm: true, field_name: 'afterhours_availability_start_seconds1[hour]', prefix: 'times', prompt: 'None' }, { id: dom_id(@pay_bill_config, 'times_start_hour'),  class: "form-select"}  %>
+                <%= select_hour pay_bill_config.start_hour(:afterhours_availability_start_seconds1), { ampm: true, field_name: 'afterhours_availability_start_seconds1[hour]', prefix: 'times', prompt: 'None' }, { id: dom_id(@pay_bill_config, 'times_start_hour'),  class: "form-select"}  %>
               </div>
               <div class="flex-grow items-center">
                 <%= select_tag 'times[afterhours_availability_start_seconds1][minute]', options_for_select((0..45).step(15).map {|i| [lpad_number(i), lpad_number(i) ]}), {id: dom_id(@pay_bill_config, 'times_start_minute'), :include_blank => 'None', class: "form-select"} %>
@@ -153,7 +153,7 @@
             <label class="text-md my-2 font-medium text-tokanisecondary-700">After Hours (M-F) End Time 1</label>
             <div class="relative flex items-center">
               <div class="flex-grow items-center mr-2">
-                <%= select_hour @pay_bill_config.end_hour(:afterhours_availability_end_seconds1), { ampm: true, field_name: 'afterhours_availability_end_seconds1[hour]', prefix: 'times', prompt: 'None'}, {id: dom_id(@pay_bill_config, 'times_end_hour'), class: "form-select"} %> 
+                <%= select_hour pay_bill_config.end_hour(:afterhours_availability_end_seconds1), { ampm: true, field_name: 'afterhours_availability_end_seconds1[hour]', prefix: 'times', prompt: 'None'}, {id: dom_id(@pay_bill_config, 'times_end_hour'), class: "form-select"} %> 
               </div>
               <div class="flex-grow items-center">
                 <%= select_tag 'times[afterhours_availability_end_seconds1][minute]', options_for_select((0..60).step(15).map {|i| [lpad_number(i), lpad_number(i) ]}), { id: dom_id(@pay_bill_config, 'times_end_minute'), :include_blank => 'None', class: "form-select"} %>
@@ -165,7 +165,7 @@
             <label class="text-md my-2 font-medium text-tokanisecondary-700">After Hours (M-F) Start Time 2</label>
             <div class="relative flex items-center">
               <div class="flex-grow items-center mr-2">
-                <%= select_hour @pay_bill_config.start_hour(:afterhours_availability_start_seconds2), { ampm: true, field_name: 'afterhours_availability_start_seconds2[hour]', prefix: 'times', prompt: 'None' }, { id: dom_id(@pay_bill_config, 'times_start_hour'),  class: "form-select"}  %>
+                <%= select_hour pay_bill_config.start_hour(:afterhours_availability_start_seconds2), { ampm: true, field_name: 'afterhours_availability_start_seconds2[hour]', prefix: 'times', prompt: 'None' }, { id: dom_id(@pay_bill_config, 'times_start_hour'),  class: "form-select"}  %>
               </div>
               <div class="flex-grow items-center">
                 <%= select_tag 'times[afterhours_availability_start_seconds2][minute]', options_for_select((0..45).step(15).map {|i| [lpad_number(i), lpad_number(i) ]}), {id: dom_id(@pay_bill_config, 'times_start_minute'), :include_blank => 'None', class: "form-select"} %>
@@ -177,7 +177,7 @@
             <label class="text-md my-2 font-medium text-tokanisecondary-700">After Hours (M-F) End Time 2</label>
             <div class="relative flex items-center">
               <div class="flex-grow items-center mr-2">
-                <%= select_hour @pay_bill_config.end_hour(:afterhours_availability_end_seconds2), { ampm: true, field_name: 'afterhours_availability_end_seconds2[hour]', prefix: 'times', prompt: 'None'}, {id: dom_id(@pay_bill_config, 'times_end_hour'), class: "form-select"} %> 
+                <%= select_hour pay_bill_config.end_hour(:afterhours_availability_end_seconds2), { ampm: true, field_name: 'afterhours_availability_end_seconds2[hour]', prefix: 'times', prompt: 'None'}, {id: dom_id(@pay_bill_config, 'times_end_hour'), class: "form-select"} %> 
               </div>
               <div class="flex-grow items-center">
                 <%= select_tag 'times[afterhours_availability_end_seconds2][minute]', options_for_select((0..60).step(15).map {|i| [lpad_number(i), lpad_number(i) ]}), { id: dom_id(@pay_bill_config, 'times_end_minute'), :include_blank => 'None', class: "form-select"} %>
@@ -201,7 +201,7 @@
             <label class="text-md my-2 font-medium text-tokanisecondary-700">Weekend (Sat-Sun) Start Time 1</label>
             <div class="relative flex items-center">
               <div class="flex-grow items-center mr-2">
-                <%= select_hour @pay_bill_config.start_hour(:weekend_availability_start_seconds1), { ampm: true, field_name: 'weekend_availability_start_seconds1[hour]', prefix: 'times', prompt: 'None' }, { id: dom_id(@pay_bill_config, 'times_start_hour'),  class: "form-select"} %>
+                <%= select_hour pay_bill_config.start_hour(:weekend_availability_start_seconds1), { ampm: true, field_name: 'weekend_availability_start_seconds1[hour]', prefix: 'times', prompt: 'None' }, { id: dom_id(@pay_bill_config, 'times_start_hour'),  class: "form-select"} %>
               </div>
               <div class="flex-grow items-center">
                 <%= select_tag 'times[weekend_availability_start_seconds1][minute]', options_for_select((0..60).step(15).map {|i| [lpad_number(i), lpad_number(i) ]}), {id: dom_id(@pay_bill_config, 'times_start_minute'), :include_blank => 'None', class: "form-select"} %>
@@ -214,7 +214,7 @@
             <label class="text-md my-2 font-medium text-tokanisecondary-700">Weekend(Sat-Sun) End Time 1</label>
             <div class="relative flex items-center">
               <div class="flex-grow items-center mr-2">
-                <%= select_hour @pay_bill_config.end_hour(:weekend_availability_end_seconds1), { ampm: true, field_name: 'weekend_availability_end_seconds1[hour]', prefix: 'times', prompt: 'None'}, {id: dom_id(@pay_bill_config, 'times_end_hour'), class: "form-select"} %>
+                <%= select_hour pay_bill_config.end_hour(:weekend_availability_end_seconds1), { ampm: true, field_name: 'weekend_availability_end_seconds1[hour]', prefix: 'times', prompt: 'None'}, {id: dom_id(@pay_bill_config, 'times_end_hour'), class: "form-select"} %>
               </div>
               <div class="flex-grow items-center">
                 <%= select_tag 'times[weekend_availability_end_seconds1][minute]', options_for_select((0..60).step(15).map {|i| [lpad_number(i), lpad_number(i) ]}), { id: dom_id(@pay_bill_config, 'times_end_minute'), :include_blank => 'None', class: "form-select"} %>
@@ -226,7 +226,7 @@
             <label class="text-md my-2 font-medium text-tokanisecondary-700">Weekend (Sat-Sun) Start Time 2</label>
             <div class="relative flex items-center">
               <div class="flex-grow items-center mr-2">
-                <%= select_hour @pay_bill_config.start_hour(:weekend_availability_start_seconds2), { ampm: true, field_name: 'weekend_availability_start_seconds2[hour]', prefix: 'times', prompt: 'None' }, { id: dom_id(@pay_bill_config, 'times_start_hour'),  class: "form-select"}  %>
+                <%= select_hour pay_bill_config.start_hour(:weekend_availability_start_seconds2), { ampm: true, field_name: 'weekend_availability_start_seconds2[hour]', prefix: 'times', prompt: 'None' }, { id: dom_id(@pay_bill_config, 'times_start_hour'),  class: "form-select"}  %>
               </div>
               <div class="flex-grow items-center">
                 <%= select_tag 'times[weekend_availability_start_seconds2][minute]', options_for_select((0..60).step(15).map {|i| [lpad_number(i), lpad_number(i) ]}), {id: dom_id(@pay_bill_config, 'times_start_minute'), :include_blank => 'None', class: "form-select"} %>
@@ -238,7 +238,7 @@
             <label class="text-md my-2 font-medium text-tokanisecondary-700">Weekend (Sat-Sun) End Time 2</label>
             <div class="relative flex items-center">
               <div class="flex-grow items-center mr-2">    
-                <%= select_hour @pay_bill_config.end_hour(:weekend_availability_end_seconds2), { ampm: true, field_name: 'weekend_availability_end_seconds2[hour]', prefix: 'times', prompt: 'None' }, {id: dom_id(@pay_bill_config, 'times_end_hour'), class: "form-select"} %>
+                <%= select_hour pay_bill_config.end_hour(:weekend_availability_end_seconds2), { ampm: true, field_name: 'weekend_availability_end_seconds2[hour]', prefix: 'times', prompt: 'None' }, {id: dom_id(@pay_bill_config, 'times_end_hour'), class: "form-select"} %>
               </div>
               <div class="flex-grow items-center">
                 <%= select_tag 'times[weekend_availability_end_seconds2][minute]', options_for_select((0..60).step(15).map {|i| [lpad_number(i), lpad_number(i) ]}), { id: dom_id(@pay_bill_config, 'times_end_minute'), :include_blank => 'None', class: "form-select"} %>
