--- a/app/views/pay_bill_rates/_pay_bill_rate.html.erb
+++ b/app/views/pay_bill_rates/_pay_bill_rate.html.erb
@@ -141,16 +141,16 @@
   </dl>
   </div>
       
-  <%= form_with model: @pay_bill_rate, data: {turbo: @remote}, class: 'form' do |form| %>
+  <%= form_with model: @pay_bill_rate, data: {turbo: false}, class: 'form' do |form| %>
     <div class="border-t border-gray-200 px-4 py-5 sm:px-6">
       <dl class="grid grid-cols-2 gap-x-4 gap-y-8 mb-3">
       <div class="sm:col-span-1">
         <dt class="text-md font-medium text-tokanisecondary-500">Agency Customers</dt>
         <dd class="mt-3 text-sm text-gray-900">
-          <% if @pay_bill_rate.site_or_department_selected? %>
+          <% if pay_bill_rate.site_or_department_selected? %>
             <p>This rate is already associated with a specific Customer Site and/or Department, and may not be associated with any other customers.</p>
           <% else %>
-          <% @pay_bill_rate.accounts.each do |cust| %>
+          <% pay_bill_rate.accounts.each do |cust| %>
           <div class="relative flex items-start mt-1">
             <div class="flex h-5 items-center">
               <%= check_box_tag 'pay_bill_rate[account_ids][]', cust.id, true, class:"h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500" %>
@@ -162,7 +162,7 @@
           </div>  
           <% end %>
           <% @customers.each do |cust| %>
-            <% next if @pay_bill_rate.accounts.include?(cust) %>
+            <% next if pay_bill_rate.accounts.include?(cust) %>
             <div class="relative flex items-start mt-1">
               <div class="flex h-5 items-center">
                 <%= check_box_tag 'pay_bill_rate[account_ids][]', cust.id, false, class:"h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500" %>
@@ -180,10 +180,10 @@
       <div class="sm:col-span-1">
         <dt class="text-md font-medium text-tokanisecondary-500">Interpreters</dt>
         <dd  class="mt-3 text-sm text-gray-900">
-          <% if @pay_bill_rate.site_or_department_selected? %>
+          <% if pay_bill_rate.site_or_department_selected? %>
             <p>This rate is already associated with a specific Customer Site and/or Department, and may not be associated with any other customers.</p>
           <% else %>
-            <% @pay_bill_rate.interpreters.each do |int| %>
+            <% pay_bill_rate.interpreters.each do |int| %>
             <div class="relative flex items-start mt-1">
               <div class="flex h-5 items-center">
                 <%= check_box_tag 'pay_bill_rate[interpreter_ids][]', int.id, true, class:"h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500" %>
@@ -195,7 +195,7 @@
             </div>
             <% end %>
             <% @avail_interpreters.each do |int| %>
-              <% next if @pay_bill_rate.interpreters.include?(int) %>
+              <% next if pay_bill_rate.interpreters.include?(int) %>
               <div class="relative flex items-start mt-1">
                 <div class="flex h-5 items-center">
                   <%= check_box_tag 'pay_bill_rate[interpreter_ids][]', int.id, false, class:"h-4 w-4 rounded border-gray-300 text-tokanisecondary-600 focus:ring-tokanisecondary-500" %>
