--- a/app/views/shared/_left_nav.html.erb
+++ b/app/views/shared/_left_nav.html.erb
@@ -5,3 +5,4 @@
 <%= nav_link_to "Pay Bill Rates", pay_bill_rates_path, class: "nav-link" %>
 <%= nav_link_to "Languages", languages_path, class: "nav-link" %><%= nav_link_to "Requestor Details", requestor_details_path, class: "nav-link" %>
 <%= nav_link_to "Agencies", agencies_path, class: "nav-link" %>
+<%= nav_link_to "Providers", providers_path, class: "nav-link" %>
