recipient crud in

--- a/app/views/recipients/edit.html.erb
+++ b/app/views/recipients/edit.html.erb
@@ -1,4 +1,4 @@
-<%= content_for :title, t("shared.scaffold.edit.title", model: "Provider") %>
+<%= content_for :title, t("shared.scaffold.edit.title", model: "Recipient") %>
 <%= render partial: "shared/sidenav" %>
 <div class="flex flex-1 flex-col md:pl-64">
   <main class="flex-1">
@@ -8,22 +8,18 @@
             <div class="sm:flex sm:items-center pb-6">
                 <div class="sm:flex-auto"> 
                   <h1 class="text-xl font-semibold text-gray-900">
-                    <%= link_to "Providers", providers_path, class: "text-tokanisecondary-500" %>
+                    <%= link_to "Recipients", recipients_path, class: "text-tokanisecondary-500" %>
                       <span class="text-gray-400 font-light mx-2">\</span>
-                      <%= @provider.last_name %>, <%= @provider.first_name %>
+                      <%= @recipient.last_name %>, <%= @recipient.first_name %>
                   </h1>
                 </div>
-                 
                 </div>
-          
-
                 <div class="p-8 bg-white rounded shadow">
-                  <%= render partial: "form", locals: { provider: @provider, account_customers: @account_customers, customers: @customers, sites: @sites, departments: @departments } %>
-                 
-                 
+                  <%= render partial: "form", locals: { recipient: @recipient, account_customers: @account_customers } %> 
                 </div>
             </div>
           </div>
         </div>
   </main>
 </div>
+
