--- a/app/views/shared/_left_nav.html.erb
+++ b/app/views/shared/_left_nav.html.erb
@@ -6,3 +6,4 @@
 <%= nav_link_to "Languages", languages_path, class: "nav-link" %><%= nav_link_to "Requestor Details", requestor_details_path, class: "nav-link" %>
 <%= nav_link_to "Agencies", agencies_path, class: "nav-link" %>
 <%= nav_link_to "Providers", providers_path, class: "nav-link" %>
+<%= nav_link_to "Recipients", recipients_path, class: "nav-link" %>
